Fix 51 errors found in undirected multi-round audit
JIT (3 fixes):
- C1 uses separate C1MaxInlineLevel=9, not shared MaxInlineLevel
- Tiered compilation: JDK 6 experimental (not JDK 7)

JVM (7 fixes):
- JFR: JDK 7u40 commercial (not JDK 11)
- JEP 332 is TLS 1.3, not loop strip mining
- Thread-local handshake: JDK 10 (not JDK 17)
- UseCompactObjectHeaders: experimental (not default)
- ZGenerational flag: removed in JDK 24+
- jvisualvm: removed from JDK 9+
- PrintGCDetails: deprecated, recommend -Xlog:gc*

Concurrency (5 fixes):
- Removed fabricated RUNNING thread state
- Virtual Threads: JDK 19 preview (not JDK 21)
- Structured Concurrency: fixed garbled version history
- AQS: prev/next fields still exist (not removed)
- lazy keyword: noted as unimplemented proposal

Memory (4 fixes):
- Compact Object Header: correct bit layout from markWord.hpp
- Mark Word: removed obsolete biased locking fields
- java.lang.Object: 8B compact (not 12B)
- PrintGCDetails → -Xlog:gc*

Security (5 fixes):
- Removed fabricated JEP 373/518 references
- Fixed HKDF API to actual builder pattern
- Fixed PEM API: PEMEncoder/PEMDecoder (not PEM.encode)
- Removed fabricated PKCS10CertRequest

Crypto (4 fixes):
- TLS 1.0: JDK 1.4+ (not 5+), TLS 1.1: JDK 7+ (not 5+)
- Fixed PEM API, broken security/ssl/ link

ClassLoading: "JDK 2" → "JDK 1.2", JEP 516 scope corrected
Modules: JEP 375→384, JEP 476 JDK 25→23
Valhalla: Unnamed Patterns JDK 21→22, removed empty code block
Network: HTTP/3 JDK 25→26 (2 places)
Arch: JEP 450→519, fixed broken ../security/ link
Reflection: privateLookupIn() missing arguments
GraalVM: "团队 -30%" marked as unverified

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>